# solveBAL

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  config
include/: Normalizer.h  PointVertex.h  PosePointEdge.h  PoseVertex.h  VertexAndEdge.h
res/: CamVertexFile.txt  EdgeFile.txt  PointVertexFile.txt
result/: Final.ply  Init.ply
scripts/: splitBADataset.py
src/: Normalizer.cpp  PointVertex.cpp  PosePointEdge.cpp  PoseVertex.cpp  VertexAndEdge.cpp  main.cpp
test/: angleAxis2RTest.cpp  lpNormTest.cpp
